#2 Fix container alignment

--- a/dashboard/assets/typography.css
+++ b/dashboard/assets/typography.css
@@ -2,10 +2,10 @@ body {
     background-color: rgba(40, 40, 40, 1);
     color: rgb(240, 240, 240);
     height: 10vh;
-    margin: 3%;
+    margin: 2%;
 }
 
-.divCard {
+.card {
     background-color: rgba(0, 0, 0, 0);
     font-size: 60px;
     padding: 15px 15px 15px 15px;
@@ -13,9 +13,21 @@ body {
     text-align: center;
 }
 
-.divRoundedBorder {
+.rounded-border {
     border-radius: 15px;
     background-color: rgba(30, 30, 30, 1);
     padding: 15px 15px 15px 15px;
-    margin: 5px 5px 5px 5px;
+    margin: 0.5% 0.5% 0.5% 0.5%;
+}
+
+.one-per-row {
+    width: 99%;
+}
+
+.three-per-row {
+    width: 32.3333%;
+}
+
+.six-per-row {
+    width: 15.6666%;
 }
